Melhorias no projeto

--- a/TableTime/app/src/main/AndroidManifest.xml
+++ b/TableTime/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         </activity>
         <activity
             android:name=".ContaInformacoesActivity"
-            android:exported="false" /> <!-- Definindo a atividade principal -->
+            android:exported="false" />
         <activity
             android:name=".HomepageActivity"
             android:exported="false" />
